# Omni-Bot

./: Omni-Bot.ino  README.md
omni_bot/: CMakeLists.txt  package.xml
omni_bot/config/: mapper_params_online_async.yaml  omnidirectional_controller.yaml
omni_bot/config/rviz/: map_view.rviz  urdf_view.rviz
omni_bot/description/: bot.xacro  gazebo_params_diffdrive.xacro  gazebo_params_ros2.xacro  omni_bot.urdf.xacro  ros2_control.xacro  wheels.xacro
omni_bot/description/meshes/: omni_wheel_152mm.stl  omni_wheel_bush.stl  omni_wheel_plate.stl  omni_wheel_roller.stl
omni_bot/launch/: bot.launch.py  gazebo.launch.DONTRUN.py  gazebo.launch.py  mapper.launch.py  online_async_launch.py  urdf.launch.py  wheel_speed_subs.py
omni_bot/maps/: ground_floor.yaml  rs.yaml
omni_bot_description/: CMakeLists.txt  package.xml
omni_bot_description/description/: bot.xacro  omni_bot.urdf.xacro  wheels.xacro
omni_bot_description/launch/: urdf.launch.py
omni_bot_real/: CMakeLists.txt  package.xml
omni_bot_real/config/: mapper_params_localization.yaml  mapper_params_online_async.yaml  nav2_params.yaml
omni_bot_real/launch/: localise.launch.py  localization_launch.py  map_area.launch.py  mapper.launch.py  navigation_launch.py  online_async_launch.py
omni_bot_real/maps/: ground_floor.pgm  rs.data  rs.pgm  rs.yaml
omni_bot_sim/: CMakeLists.txt  package.xml
omni_bot_sim/description/: bot.xacro  wheels.xacro
omni_bot_sim/launch/: gazebo.launch.py  urdf.launch.py
omni_controller/: package.xml  setup.py
omni_controller/launch/: omni_controller.launch.py
(+8 files in other folders)
